--- a/styles/global.css
+++ b/styles/global.css
@@ -1,9 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 #__next {
   min-height: 100vh;
   min-width: 100vw;
 }
-
+/*# sourceMappingURL=global.css.map */
